# llm-playground

./: .gitignore  LICENSE  README.md  pyproject.toml
output/color_test/: detailed.csv  summary.csv
output/moby_dick/: dataset.jsonlines  results.csv
src/llm_playground/: color_test.py  moby_dick.py
