[project]
name = "llm-playground"
version = "0.1.0"
description = "Practical experiments and explorations with Large Language Models"
authors = [{ name = "Omer Yuksel", email = "4077805+osyuksel@users.noreply.github.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "joblib>=1.5.1",
    "openai>=1.86.0,<2",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "tabulate>=0.9.0",
    "thefuzz>=0.22.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
